--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Amoung Us Podcast</h2>
+							<h2>Among Us Podcast</h2>
 							<p>This is a podcast created with users of the current popular game Amoung Us</p>
 							<ul class="actions stacked">
 								<li><a href="https://soundcloud.com/yuzhi-ma/among-us-strategy" class="button">Listen Here</a></li>
