--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="manwithipad.jpg" alt="" />
 						</div>
 					</section>
-
+<!--  -->
 				<!-- Four -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
