--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="manwithipad.jpg" alt="" />
+							<img src="images/manipad.jpg" alt="" />
 						</div>
 					</section>
 <!--  -->
