--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/leafpileMargU.jpg" alt="" />
 						</div>
 					</section>
 
