--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/Floydhike.jpg" alt="" />
+							<img src="images/VTcar.jpg" alt="" />
 						</div>
 					</section>
 
@@ -35,7 +35,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Running Through the Invisible Finish Line</h2>
-							<p>This post highlights a few reasons why you should run a virtual race.</p>
+							<p>So you think virtual races are pointless? Don't put your shoes away quite yet. Check out these 7 reasons you should run a virtual race, I promise you wont regret it!</p>
 							<ul class="actions stacked">
 								<li><a href="https://medium.com/@amelia27/running-through-the-invisible-finish-line-a5c5cc7f1619" class="button">Read Here</a></li>
 							</ul>
