--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Among Us Podcast</h2>
-							<p>This is a podcast created with users of the current popular game Amoung Us</p>
+							<p>I'm not a gamer, but I've played Among Us. Check out our podcast about why Among Us became such a hit in 2020. Learn game stategies and the secrets of the imposters.</p>
 							<ul class="actions stacked">
 								<li><a href="https://soundcloud.com/yuzhi-ma/among-us-strategy" class="button">Listen Here</a></li>
 							</ul>
