--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/VTcar.jpg" alt="" />
+							<img src="images/farmhouse.jpg" alt="" />
 						</div>
 					</section>
 
