--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Amelia Gay</h1>
-							<p class="major">Hello! I am an English and Professional and Technical Writing major at Virginia Tech. Aside from school I'm an ambassdaor for Margaritaville University and an avid runner.</p>
+							<p class="major">Hello! I am an English and Professional and Technical Writing major at Virginia Tech. Aside from school I'm an ambassdaor for Margaritaville University and an avid runner.
+								Scroll down to check out some projects I've completed this semester at VT!</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
@@ -77,7 +78,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Margaritaville University</h2>
-							<p>Are you a college student that wants to spread fun, beach vibes around your college campus? Or maybe just a huge Jimmy Buffett fan? Well check out www.margaritavilleuniversity.com to learn more about what we do as college campus ambassadors! Whether you're at school in the sunny state of Florida or bundled up during the cold winters in Alaska, the Margartivaille state of mind is on campuses all across the US. </p>
+							<p>Are you a college student that wants to spread fun, beach vibes around your college campus? Or maybe just a huge Jimmy Buffett fan? Well check out www.margaritavilleuniversity.com 5to learn more about what we do as college campus ambassadors! Whether you're at school in the sunny state of Florida or bundled up during the cold winters in Alaska, the Margartivaille state of mind is on campuses all across the US. </p>
 						</div>
 
 						<!-- Gallery -->
