--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 				<!-- Four -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Video will go here</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Ambassadors at Margaritaville University</h2>
+							<p>I'm currently an ambassador at Margaritaville University, promoting their products and the lifestyle at Virginia Tech. If your wondering WHERE Margaritaville actually is, check out this video I made & escape to your Margaritaville! .</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Watch Here</a></li>
 							</ul>
