--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 				<!-- Four -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Ambassadors at Margaritaville University</h2>
-							<p>I'm currently an ambassador at Margaritaville University, promoting their products and the lifestyle at Virginia Tech. If your wondering WHERE Margaritaville actually is, check out this video I made & escape to your Margaritaville! .</p>
+							<h2>Ambassadors at MargU</h2>
+							<p>I'm currently an ambassador at Margaritaville University, promoting their products and the lifestyle at Virginia Tech. If your wondering <em>where</em> Margaritaville actually is, check out this video I made & escape to your Margaritaville! .</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Watch Here</a></li>
 							</ul>
