--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Ambassadors at MargU</h2>
-							<p>I'm currently an ambassador at Margaritaville University, promoting their products and the lifestyle at Virginia Tech. If your wondering <em>where</em> Margaritaville actually is, check out this video I made & escape to your Margaritaville! .</p>
+							<p>I'm currently an ambassador at Margaritaville University, promoting their products and the lifestyle at Virginia Tech. If your wondering <em>where</em> Margaritaville is, check out this video I made & escape to your Margaritaville!</p>
 							<ul class="actions stacked">
 								<li><a href="https://youtu.be/D2Pb4IgRMSE" class="button">Watch Here</a></li>
 							</ul>
@@ -78,7 +78,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Margaritaville University</h2>
-							<p>Are you a college student that wants to spread fun, beach vibes around your college campus? Or maybe just a huge Jimmy Buffett fan? Well check out <a> href "www.margaritavilleuniversity.com"</a> 5to learn more about what we do as college campus ambassadors! Whether you're at school in the sunny state of Florida or bundled up during the cold winters in Alaska, the Margartivaille state of mind is on campuses all across the US. </p>
+							<p>Are you a college student that wants to spread fun, beach vibes around your college campus? Or maybe just a huge Jimmy Buffett fan? Well check out <a> href "www.margaritavilleuniversity.com"</a> to learn more about what we do as college campus ambassadors! Whether you're at school in the sunny state of Florida or bundled up during the cold winters in Alaska, the Margartivaille state of mind is on campuses all across the US. </p>
 						</div>
 
 						<!-- Gallery -->
