--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 									<a href="images/gallery/fulls/01.jpg" class="image">
 										<img src="Screenshot_20201023-151446_instagramcropped.jpg" alt="" />
 									</a>
-									<div class="caption">
+									<div class="PICS">
 										<h3>Ipsum Dolor</h3>
 										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
 										<ul class="actions fixed">
