--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Margaritaville University</h2>
-							<p>Are you a college student that wants to spread fun, beach vibes around your college campus? Or maybe just a huge Jimmy Buffett fan? Well check out <li><a href "www.margaritavilleuniversity.com"</a></li> to learn more about what we do as college campus ambassadors! Whether you're at school in the sunny state of Florida or bundled up during the cold winters in Alaska, the Margartivaille state of mind is on campuses all across the US. </p>
+							<p>Are you a college student that wants to spread fun, beach vibes around your college campus? Or maybe just a huge Jimmy Buffett fan? Well check out the link below to learn more about what we do as college campus ambassadors! Whether you're at school in the sunny state of Florida or bundled up during the cold winters in Alaska, the Margartivaille state of mind is on campuses all across the US. </p>
+								<li><a href="https://www.margaritavilleuniversity.com/" class="button">Find Margaritaville Here</a></li>
 						</div>
 
 						<!-- Gallery -->
