--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
 									<a href="images/gallery/fulls/01.jpg" class="image">
-										<img src="Screenshot_20201023-151446_instagramcropped.jpg" alt="" />
+										<img src="manipad.jpg" alt="" />
 									</a>
 									<div class="PICS">
 										<h3>Ipsum Dolor</h3>
