--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 										<img src="manipad.jpg" alt="" />
 									</a>
 									<div class="PICS">
-										<h3>Ipsum Dolor</h3>
+										<h3>Hellor</h3>
 										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
@@ -97,7 +97,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" class="image">
+									<a href="farmhouse.jpg" class="image">
 										<img src="images/gallery/thumbs/02.jpg" alt="" />
 									</a>
 									<div class="caption">
