--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 									</div>
 								</article>
 								<article>
-									<a href="farmhouse.jpg" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="" />
+									<a href="" class="image">
+										<img src="farmhouse.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Feugiat Lorem</h3>
