--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Amelia Gay</h1>
-							<p class="major">Hello! I am an English and Professional and Technical Writing major at Virginia Tech. Aside from school I'm an ambassdaor for Margaritaville University and an avid runner.
+							<p class="major">Hello! I'm an English and Professional and Technical Writing major at Virginia Tech. Aside from school, I'm an ambassdaor for Margaritaville University and an avid runner.
 								Scroll down to check out some projects I've completed this semester at VT!</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
@@ -94,7 +94,7 @@
 				<!-- Seven -->
 
 				<!-- Footer -->
-				
+
 							<p>&copy; Amelia Gay. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
 					</footer>
