--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Running Through the Invisible Finish Line</h2>
-							<p>So you think virtual races are pointless? Don't put your shoes away quite yet. Check out these 7 reasons you should run a virtual race, I promise you wont regret it!</p>
+							<p>So you think virtual races are pointless? Don't put your shoes away quite yet. Check out these 7 reasons you should run a virtual race, I promise you won't regret it!</p>
 							<ul class="actions stacked">
 								<li><a href="https://medium.com/@amelia27/running-through-the-invisible-finish-line-a5c5cc7f1619" class="button">Read Here</a></li>
 							</ul>
